generated_antlr/typedef_dslParser.py
# Generated from ./typedef_dsl.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class typedef_dslParser ( Parser ):

    grammarFileName = "typedef_dsl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'struct'", "'->'", "<INVALID>", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "':'", "','", "';'", "'<'", "'>'" ]

    symbolicNames = [ "<INVALID>", "NUMBER", "STRING_LITERAL", "WS", "NEWLINE", 
                      "BOOLEAN_VALUE", "TYPE_LITERAL", "TYPE_EMBEDDED", 
                      "STRUCT", "VARIABLE_NAME_SEPERATOR", "VARIABLE_NAME", 
                      "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACKET", "CLOSE_BRACKET", 
                      "OPEN_SQUARE", "CLOSE_SQUARE", "KEY_SEPERATOR", "VALUE_SEPERATOR", 
                      "END_OF_STATEMENT", "OPEN_EMBEDDED", "CLOSE_EMBEDDED" ]

    RULE_statements = 0
    RULE_literal_statement = 1
    RULE_phrase = 2
    RULE_type_decl = 3
    RULE_value = 4
    RULE_multiple_values = 5
    RULE_key_value_pair = 6
    RULE_map_kv_key = 7
    RULE_map_kv_value = 8
    RULE_struct_members = 9

    ruleNames =  [ "statements", "literal_statement", "phrase", "type_decl", 
                   "value", "multiple_values", "key_value_pair", "map_kv_key", 
                   "map_kv_value", "struct_members" ]

    EOF = Token.EOF
    NUMBER=1
    STRING_LITERAL=2
    WS=3
    NEWLINE=4
    BOOLEAN_VALUE=5
    TYPE_LITERAL=6
    TYPE_EMBEDDED=7
    STRUCT=8
    VARIABLE_NAME_SEPERATOR=9
    VARIABLE_NAME=10
    OPEN_PAREN=11
    CLOSE_PAREN=12
    OPEN_BRACKET=13
    CLOSE_BRACKET=14
    OPEN_SQUARE=15
    CLOSE_SQUARE=16
    KEY_SEPERATOR=17
    VALUE_SEPERATOR=18
    END_OF_STATEMENT=19
    OPEN_EMBEDDED=20
    CLOSE_EMBEDDED=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(typedef_dslParser.EOF, 0)

        def literal_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(typedef_dslParser.Literal_statementContext)
            else:
                return self.getTypedRuleContext(typedef_dslParser.Literal_statementContext,i)


        def getRuleIndex(self):
            return typedef_dslParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)




    def statements(self):

        localctx = typedef_dslParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.literal_statement()
                self.state = 23 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==typedef_dslParser.VARIABLE_NAME):
                    break

            self.state = 25
            self.match(typedef_dslParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Literal_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE_NAME(self):
            return self.getToken(typedef_dslParser.VARIABLE_NAME, 0)

        def VARIABLE_NAME_SEPERATOR(self):
            return self.getToken(typedef_dslParser.VARIABLE_NAME_SEPERATOR, 0)

        def phrase(self):
            return self.getTypedRuleContext(typedef_dslParser.PhraseContext,0)


        def END_OF_STATEMENT(self):
            return self.getToken(typedef_dslParser.END_OF_STATEMENT, 0)

        def getRuleIndex(self):
            return typedef_dslParser.RULE_literal_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral_statement" ):
                listener.enterLiteral_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral_statement" ):
                listener.exitLiteral_statement(self)




    def literal_statement(self):

        localctx = typedef_dslParser.Literal_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_literal_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.match(typedef_dslParser.VARIABLE_NAME)
            self.state = 28
            self.match(typedef_dslParser.VARIABLE_NAME_SEPERATOR)
            self.state = 29
            self.phrase()
            self.state = 30
            self.match(typedef_dslParser.END_OF_STATEMENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PhraseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return typedef_dslParser.RULE_phrase

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ValuePhraseContext(PhraseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a typedef_dslParser.PhraseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_decl(self):
            return self.getTypedRuleContext(typedef_dslParser.Type_declContext,0)

        def value(self):
            return self.getTypedRuleContext(typedef_dslParser.ValueContext,0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(typedef_dslParser.WS)
            else:
                return self.getToken(typedef_dslParser.WS, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValuePhrase" ):
                listener.enterValuePhrase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValuePhrase" ):
                listener.exitValuePhrase(self)


    class StructPhraseContext(PhraseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a typedef_dslParser.PhraseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRUCT(self):
            return self.getToken(typedef_dslParser.STRUCT, 0)
        def struct_members(self):
            return self.getTypedRuleContext(typedef_dslParser.Struct_membersContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructPhrase" ):
                listener.enterStructPhrase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructPhrase" ):
                listener.exitStructPhrase(self)



    def phrase(self):

        localctx = typedef_dslParser.PhraseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_phrase)
        self._la = 0 # Token type
        try:
            self.state = 43
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [typedef_dslParser.TYPE_LITERAL, typedef_dslParser.TYPE_EMBEDDED]:
                localctx = typedef_dslParser.ValuePhraseContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 32
                self.type_decl()
                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==typedef_dslParser.WS:
                    self.state = 33
                    self.match(typedef_dslParser.WS)
                    self.state = 38
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 39
                self.value()
                pass
            elif token in [typedef_dslParser.STRUCT]:
                localctx = typedef_dslParser.StructPhraseContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.match(typedef_dslParser.STRUCT)
                self.state = 42
                self.struct_members()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return typedef_dslParser.RULE_type_decl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LiteralTypeContext(Type_declContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a typedef_dslParser.Type_declContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPE_LITERAL(self):
            return self.getToken(typedef_dslParser.TYPE_LITERAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteralType" ):
                listener.enterLiteralType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteralType" ):
                listener.exitLiteralType(self)


    class EmbeddedTypeContext(Type_declContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a typedef_dslParser.Type_declContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPE_EMBEDDED(self):
            return self.getToken(typedef_dslParser.TYPE_EMBEDDED, 0)
        def OPEN_EMBEDDED(self):
            return self.getToken(typedef_dslParser.OPEN_EMBEDDED, 0)
        def type_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(typedef_dslParser.Type_declContext)
            else:
                return self.getTypedRuleContext(typedef_dslParser.Type_declContext,i)

        def CLOSE_EMBEDDED(self):
            return self.getToken(typedef_dslParser.CLOSE_EMBEDDED, 0)
        def VALUE_SEPERATOR(self, i:int=None):
            if i is None:
                return self.getTokens(typedef_dslParser.VALUE_SEPERATOR)
            else:
                return self.getToken(typedef_dslParser.VALUE_SEPERATOR, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmbeddedType" ):
                listener.enterEmbeddedType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmbeddedType" ):
                listener.exitEmbeddedType(self)



    def type_decl(self):

        localctx = typedef_dslParser.Type_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type_decl)
        self._la = 0 # Token type
        try:
            self.state = 58
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [typedef_dslParser.TYPE_EMBEDDED]:
                localctx = typedef_dslParser.EmbeddedTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.match(typedef_dslParser.TYPE_EMBEDDED)
                self.state = 46
                self.match(typedef_dslParser.OPEN_EMBEDDED)
                self.state = 47
                self.type_decl()
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==typedef_dslParser.VALUE_SEPERATOR:
                    self.state = 48
                    self.match(typedef_dslParser.VALUE_SEPERATOR)
                    self.state = 49
                    self.type_decl()
                    self.state = 54
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 55
                self.match(typedef_dslParser.CLOSE_EMBEDDED)
                pass
            elif token in [typedef_dslParser.TYPE_LITERAL]:
                localctx = typedef_dslParser.LiteralTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.match(typedef_dslParser.TYPE_LITERAL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return typedef_dslParser.RULE_value

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MapValueContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a typedef_dslParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPEN_BRACKET(self):
            return self.getToken(typedef_dslParser.OPEN_BRACKET, 0)
        def CLOSE_BRACKET(self):
            return self.getToken(typedef_dslParser.CLOSE_BRACKET, 0)
        def key_value_pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(typedef_dslParser.Key_value_pairContext)
            else:
                return self.getTypedRuleContext(typedef_dslParser.Key_value_pairContext,i)

        def VALUE_SEPERATOR(self):
            return self.getToken(typedef_dslParser.VALUE_SEPERATOR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapValue" ):
                listener.enterMapValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapValue" ):
                listener.exitMapValue(self)


    class StringValueContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a typedef_dslParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING_LITERAL(self):
            return self.getToken(typedef_dslParser.STRING_LITERAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringValue" ):
                listener.enterStringValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringValue" ):
                listener.exitStringValue(self)


    class SetValueContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a typedef_dslParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPEN_BRACKET(self):
            return self.getToken(typedef_dslParser.OPEN_BRACKET, 0)
        def multiple_values(self):
            return self.getTypedRuleContext(typedef_dslParser.Multiple_valuesContext,0)

        def CLOSE_BRACKET(self):
            return self.getToken(typedef_dslParser.CLOSE_BRACKET, 0)
        def VALUE_SEPERATOR(self):
            return self.getToken(typedef_dslParser.VALUE_SEPERATOR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetValue" ):
                listener.enterSetValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetValue" ):
                listener.exitSetValue(self)


    class BooleanValueContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a typedef_dslParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOLEAN_VALUE(self):
            return self.getToken(typedef_dslParser.BOOLEAN_VALUE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanValue" ):
                listener.enterBooleanValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanValue" ):
                listener.exitBooleanValue(self)


    class NumberValueContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a typedef_dslParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(typedef_dslParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberValue" ):
                listener.enterNumberValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberValue" ):
                listener.exitNumberValue(self)


    class ArrayValueContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a typedef_dslParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPEN_SQUARE(self):
            return self.getToken(typedef_dslParser.OPEN_SQUARE, 0)
        def multiple_values(self):
            return self.getTypedRuleContext(typedef_dslParser.Multiple_valuesContext,0)

        def CLOSE_SQUARE(self):
            return self.getToken(typedef_dslParser.CLOSE_SQUARE, 0)
        def VALUE_SEPERATOR(self):
            return self.getToken(typedef_dslParser.VALUE_SEPERATOR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayValue" ):
                listener.enterArrayValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayValue" ):
                listener.exitArrayValue(self)



    def value(self):

        localctx = typedef_dslParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = typedef_dslParser.BooleanValueContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.match(typedef_dslParser.BOOLEAN_VALUE)
                pass

            elif la_ == 2:
                localctx = typedef_dslParser.NumberValueContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.match(typedef_dslParser.NUMBER)
                pass

            elif la_ == 3:
                localctx = typedef_dslParser.StringValueContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 62
                self.match(typedef_dslParser.STRING_LITERAL)
                pass

            elif la_ == 4:
                localctx = typedef_dslParser.ArrayValueContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 63
                self.match(typedef_dslParser.OPEN_SQUARE)
                self.state = 64
                self.multiple_values()
                self.state = 65
                self.match(typedef_dslParser.CLOSE_SQUARE)
                self.state = 67
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 66
                    self.match(typedef_dslParser.VALUE_SEPERATOR)


                pass

            elif la_ == 5:
                localctx = typedef_dslParser.SetValueContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 69
                self.match(typedef_dslParser.OPEN_BRACKET)
                self.state = 70
                self.multiple_values()
                self.state = 71
                self.match(typedef_dslParser.CLOSE_BRACKET)
                self.state = 73
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 72
                    self.match(typedef_dslParser.VALUE_SEPERATOR)


                pass

            elif la_ == 6:
                localctx = typedef_dslParser.MapValueContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 75
                self.match(typedef_dslParser.OPEN_BRACKET)
                self.state = 77 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 76
                    self.key_value_pair()
                    self.state = 79 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << typedef_dslParser.NUMBER) | (1 << typedef_dslParser.STRING_LITERAL) | (1 << typedef_dslParser.BOOLEAN_VALUE) | (1 << typedef_dslParser.OPEN_BRACKET) | (1 << typedef_dslParser.OPEN_SQUARE))) != 0)):
                        break

                self.state = 81
                self.match(typedef_dslParser.CLOSE_BRACKET)
                self.state = 83
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 82
                    self.match(typedef_dslParser.VALUE_SEPERATOR)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Multiple_valuesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(typedef_dslParser.ValueContext)
            else:
                return self.getTypedRuleContext(typedef_dslParser.ValueContext,i)


        def VALUE_SEPERATOR(self, i:int=None):
            if i is None:
                return self.getTokens(typedef_dslParser.VALUE_SEPERATOR)
            else:
                return self.getToken(typedef_dslParser.VALUE_SEPERATOR, i)

        def getRuleIndex(self):
            return typedef_dslParser.RULE_multiple_values

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiple_values" ):
                listener.enterMultiple_values(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiple_values" ):
                listener.exitMultiple_values(self)




    def multiple_values(self):

        localctx = typedef_dslParser.Multiple_valuesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_multiple_values)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.value()
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==typedef_dslParser.VALUE_SEPERATOR:
                self.state = 88
                self.match(typedef_dslParser.VALUE_SEPERATOR)
                self.state = 89
                self.value()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Key_value_pairContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def map_kv_key(self):
            return self.getTypedRuleContext(typedef_dslParser.Map_kv_keyContext,0)


        def KEY_SEPERATOR(self):
            return self.getToken(typedef_dslParser.KEY_SEPERATOR, 0)

        def map_kv_value(self):
            return self.getTypedRuleContext(typedef_dslParser.Map_kv_valueContext,0)


        def VALUE_SEPERATOR(self):
            return self.getToken(typedef_dslParser.VALUE_SEPERATOR, 0)

        def getRuleIndex(self):
            return typedef_dslParser.RULE_key_value_pair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKey_value_pair" ):
                listener.enterKey_value_pair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKey_value_pair" ):
                listener.exitKey_value_pair(self)




    def key_value_pair(self):

        localctx = typedef_dslParser.Key_value_pairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_key_value_pair)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.map_kv_key()
            self.state = 96
            self.match(typedef_dslParser.KEY_SEPERATOR)
            self.state = 97
            self.map_kv_value()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==typedef_dslParser.VALUE_SEPERATOR:
                self.state = 98
                self.match(typedef_dslParser.VALUE_SEPERATOR)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Map_kv_keyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(typedef_dslParser.ValueContext,0)


        def getRuleIndex(self):
            return typedef_dslParser.RULE_map_kv_key

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMap_kv_key" ):
                listener.enterMap_kv_key(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMap_kv_key" ):
                listener.exitMap_kv_key(self)




    def map_kv_key(self):

        localctx = typedef_dslParser.Map_kv_keyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_map_kv_key)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Map_kv_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(typedef_dslParser.ValueContext,0)


        def getRuleIndex(self):
            return typedef_dslParser.RULE_map_kv_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMap_kv_value" ):
                listener.enterMap_kv_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMap_kv_value" ):
                listener.exitMap_kv_value(self)




    def map_kv_value(self):

        localctx = typedef_dslParser.Map_kv_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_map_kv_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_membersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_BRACKET(self):
            return self.getToken(typedef_dslParser.OPEN_BRACKET, 0)

        def VARIABLE_NAME(self, i:int=None):
            if i is None:
                return self.getTokens(typedef_dslParser.VARIABLE_NAME)
            else:
                return self.getToken(typedef_dslParser.VARIABLE_NAME, i)

        def type_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(typedef_dslParser.Type_declContext)
            else:
                return self.getTypedRuleContext(typedef_dslParser.Type_declContext,i)


        def CLOSE_BRACKET(self):
            return self.getToken(typedef_dslParser.CLOSE_BRACKET, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(typedef_dslParser.NEWLINE)
            else:
                return self.getToken(typedef_dslParser.NEWLINE, i)

        def getRuleIndex(self):
            return typedef_dslParser.RULE_struct_members

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_members" ):
                listener.enterStruct_members(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_members" ):
                listener.exitStruct_members(self)




    def struct_members(self):
